# clock-app

./: run-app.sh
.github/workflows/: main.yml
docker/: Dockerfile
src/: CMakeLists.txt  configuration.json  main.cpp  run.sh
src/applications/: Container.cpp  Container.h
src/applications/clock/: Application.cpp  Application.h  Configuration.cpp  Configuration.h
src/applications/common/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  TimerConfiguration.cpp  TimerConfiguration.h  Types.h
src/applications/countdown/: Application.cpp  Application.h
src/applications/menu/: Application.cpp  Application.h  Item.cpp  Item.h  Model.cpp  Model.h
src/applications/setup/: Application.cpp  Application.h
src/applications/timeelapsed/: Application.cpp  Application.h
src/applications/watchface/: Application.cpp  Application.h
src/drivers/network/: Driver.cpp  Driver.h
src/qml/: CMakeLists.txt
src/qml/Components/: CMakeLists.txt  MediaCarousel.qml  NotificationCarousel.qml  RingMenu.qml  Translation.qml  Utils.qml
src/qml/Panels/: CMakeLists.txt  ClockPanel.qml  CountdownPanel.qml  DebugPanel.qml  LoadingPanel.qml  LowerMainPanel.qml  LowerMenuOverlay.qml  PendulumPanel.qml  RoundProgressBarPanel.qml  SetupPanel.qml  SevenSegmentPanel.qml  StartupPanel.qml  UpperMainPanel.qml  UpperMenuOverlay.qml  WatchfacesPanel.qml
src/qml/Panels/Debug/: GalleryPanel.qml  InspectorPanel.qml  SimulationPanel.qml  UtilityPanel.qml
src/qml/Resources/: CMakeLists.txt
src/qmlcomponents/: QmlUtils.cpp  QmlUtils.h
src/services/: Container.cpp  Container.h
src/services/configuration/: DeviceConfiguration.cpp  DeviceConfiguration.h  Service.cpp  Service.h
src/services/media/: Item.cpp  Item.h  Model.cpp  Model.h  Service.cpp  Service.h
src/services/remoteapi/: DeviceConfiguration.cpp  DeviceConfiguration.h
src/services/rest/: Service.cpp  Service.h
src/services/systemmonitor/: Service.cpp  Service.h
src/services/websocket/: Service.cpp  Service.h  Types.h
